# name-gen

./: CMakeLists.txt  README.md  name-gen.lua
include/: phonemes.h
src/: CMakeLists.txt  main.cpp  phonemes.cpp
